Module Security task implemented in a new branch